// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuAction renders component 1`] = `
<Fragment>
  <WithStyles(ForwardRef(IconButton))
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </WithStyles(ForwardRef(IconButton))>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    open={false}
  >
    <ClickAwayListener
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="menuList-mock"
      >
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ClickAwayListener>
  </Memo(WithStyles(PopupMenu))>
</Fragment>
`;

exports[`MenuAction renders with optional props 1`] = `
<Fragment>
  <IconButton
    buttonRef={[Function]}
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      className="icon-mock"
      fontSize="inherit"
    />
  </IconButton>
  <Memo(WithStyles(PopupMenu))
    anchorEl={
      Object {
        "current": null,
      }
    }
    offset="0 20"
    open={false}
  >
    <ClickAwayListener
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="menuList-mock"
      >
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ClickAwayListener>
  </Memo(WithStyles(PopupMenu))>
</Fragment>
`;
